--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     /* background-color: rgb(228, 207, 207);*/
     /* background-image: linear-gradient(to right, #FFC0CB, rgb(139, 232, 255));*/
     background-image: linear-gradient(to right, #faedf0, rgb(174, 210, 219));
+    color: black;
 }
 
 
